<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>twowheel_drive</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rohithkarella@gmail.com">rohith</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>              <!-- ROS2 Python client library -->
  <depend>geometry_msgs</depend>      <!-- Message types for robot movement -->
  <depend>sensor_msgs</depend>        <!-- Sensor message types -->
  <depend>gazebo_ros</depend>         <!-- Gazebo simulation integration -->
  <depend>tf2_ros</depend>            <!-- Transform library -->
  <depend>urdf</depend>
  <depend>xacro</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
